# hamrforge

./: .gitignore  Containerfile  LICENSE.md  README.md  design_document.md  pyproject.toml  roadmap.md
assignments/byte-class/: README.md  assignment.yml
assignments/byte-class/starter/: Byte.cpp
assignments/byte-constructors/: README.md  assignment.yml
assignments/byte-constructors/starter/: Byte.cpp  Byte.h  main.cpp
data/catalog/: catalog.yml
fixtures/bad-addition/: Byte.cpp
fixtures/bad-bit-order/: Byte.cpp  main.cpp
fixtures/compile-error/: Byte.cpp  Byte.h  main.cpp
fixtures/huge-output/: main.cpp
fixtures/infinite-loop/: main.cpp
fixtures/missing-files/: Byte.h  main.cpp
fixtures/perfect/: Byte.cpp  Byte.h  main.cpp
src/hamrforge/: __init__.py  adapters.py  assignment.py  batch.py  catalog.py  cli.py  demo.py  grading.py  models.py  reports.py  runner.py  submission.py  web.py  workspace.py
src/hamrforge/static/: diagnostic.css  workspace.js
tests/: test_assignment_validation.py  test_batch_grade.py  test_catalog.py  test_cli.py  test_demo.py  test_grade_file_check.py  test_runner.py  test_web.py  test_workspace.py
ui-prototypes/: assignment-builder.html  assignment-results.html  index.html  instructor-courses.html  instructor-dashboard.html  new-section.html  prototype.css  student-courses.html  student-dashboard.html  student-workspace.html
